src/objects/TRAK_UserStory2Design__c.object
<CustomObject>
    <description>Business Description: This object is used to link User Stories to Designs. A design may be linked to many user stories and a user story may be linked to many designs.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design</label>
        <referenceTo>TRAK_Design__c</referenceTo>
        <relationshipLabel>User Story / Design Links</relationshipLabel>
        <relationshipName>TRAK_UserStory2Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>User_Story__r.Allocated_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Approval_Status__c</fullName>
        <formula>TEXT(User_Story__r.Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>TRAK_User_Story__c</referenceTo>
        <relationshipName>TRAK_Req2Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Story / Design Link</label>
    <nameField>
        <displayFormat>UD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story / Design Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>